--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +30,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-utils": "^1.4.2"
+    "eslint-utils": "^3.0.0"
   }
 }
